<resources>
    <string name="app_name">Degree Designer</string>
    <string name="welcome">Welcome!</string>
    <string name="ready">Ready to plan your degree?</string>
    <string name="go">Let\'s go!</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="change_in_settings">(don\'t worry, you can change all of this later in settings!)</string>
    <string name="start_planning">Start planning!</string>
    <string name="title_home">Home</string>
    <string name="title_requirements">Requirements</string>
    <string name="title_resources">Resources</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="college">College</string>
    <string name="enter_minor">Enter minor</string>
    <string name="enter_major">Enter major</string>
    <string name="enter_college">Enter college</string>
    <string name="enter_incoming_year">Incoming year</string>
    <string name="enter_graduating_year">Graduating year</string>
    <string name="incoming_year">Incoming Year</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="title_profile">Profile</string>
    <string name="new_requirement">New Requirement</string>
    <string name="prequisites">Prerequisites</string>
    <string name="overlap_requirement">Overlap Requirement</string>
    <string name="notes">Notes</string>
    <string name="department">Department</string>
    <string name="course_code">Course Code</string>
    <string name="units">Units</string>
    <string name="p_np">Pass/No Pass</string>
    <string name="save">Save</string>
    <string name="button_desc">Close Page</string>
    <string name="enter_department">Enter department</string>
    <string name="enter_course_code">Enter course code</string>
    <string name="college_advising">College Advising</string>
    <string name="revelle_advising">Revelle Advising</string>
    <string name="muir_advising">Muir Advising</string>
    <string name="marshall_advising">Marshall Advising</string>
    <string name="warren_advising">Warren Advising</string>
    <string name="erc_advising">ERC Advising</string>
    <string name="sixth_advising">Sixth Advising</string>
    <string name="seventh_advising">Seventh Advising</string>
    <string name="department_advising">Department Advising</string>
    <string name="ucsd_catalog">UCSD Catalog</string>
    <string name="webreg">WebReg</string>
    <string name="element">Element</string>
    <string name="checklist">Checklist</string>
    <string name="quarter_plan">Quarter Plan</string>
    <string name="course">Course</string>
    <string name="p_np_caps">P/NP</string>
    <string name="_4_0">4.0</string>
    <string name="university">University</string>
    <string name="requirement_category">Requirement Category</string>
    <string name="year">Year</string>
    <string name="fall">Fall</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="num_years">Number of Years</string>
    <string name="_4">4</string>
    <string name="year_entered">Year Entered</string>
    <string name="_2020">2020</string>
    <string name="enter_num_years">Enter number of years</string>
    <string name="enter_year_entered">Enter year entered</string>
    <string name="completed">Completed?</string>
    <string name="ok">OK</string>
    <string name="suggested_courses">Suggested Courses</string>
    <string name="completed_text">Completed</string>
    <string name="uncompleted_text">Uncompleted</string>
    <string name="total_units">Total Units</string>
    <string name="total_units_text">Total Units: </string>
    <string name="delete_course">Delete Course?</string>
    <string name="cancel">Cancel</string>
    <string name="previous_page">Return to previous page</string>
    <string name="all_departments">All Departments</string>
    <string name="current_catalog">2020–2021 Catalog</string>
</resources>