<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:tint="@android:color/black"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_requirements"
        android:tint="@android:color/black"
        android:icon="@drawable/ic_add_requirement"
        android:title="@string/title_requirements" />

    <item
        android:id="@+id/navigation_resources"
        android:tint="@android:color/black"
        android:icon="@drawable/ic_resources"
        android:title="@string/title_resources" />

    <item
        android:id="@+id/navigation_profile"
        android:tint="@android:color/black"
        android:icon="@drawable/ic_action_name"
        android:title="@string/title_profile" />

</menu>