<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/text_college"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/college"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_college"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:importantForAutofill="no"
        android:hint="@string/enter_college"
        app:layout_constraintStart_toStartOf="@+id/text_college"
        app:layout_constraintTop_toBottomOf="@+id/text_college" />

    <TextView
        android:id="@+id/text_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/major"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_college"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_college" />

    <EditText
        android:id="@+id/edit_text_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:importantForAutofill="no"
        android:hint="@string/enter_major"
        app:layout_constraintStart_toStartOf="@+id/text_major"
        app:layout_constraintTop_toBottomOf="@+id/text_major" />

    <TextView
        android:id="@+id/text_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/minor"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_major"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_major" />

    <EditText
        android:id="@+id/edit_text_minor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:importantForAutofill="no"
        android:hint="@string/enter_minor"
        app:layout_constraintStart_toStartOf="@+id/text_minor"
        app:layout_constraintTop_toBottomOf="@+id/text_minor" />

    <TextView
        android:id="@+id/text_num_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/num_years"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_major"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_minor" />

    <EditText
        android:id="@+id/edit_text_num_years"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="number"
        android:textSize="14sp"
        android:importantForAutofill="no"
        android:hint="@string/enter_num_years"
        android:text="@string/_4"
        app:layout_constraintStart_toStartOf="@+id/text_minor"
        app:layout_constraintTop_toBottomOf="@+id/text_num_years" />

    <TextView
        android:id="@+id/text_year_entered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/year_entered"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_major"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_num_years" />

    <EditText
        android:id="@+id/edit_text_year_entered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="number"
        android:textSize="14sp"
        android:importantForAutofill="no"
        android:hint="@string/enter_year_entered"
        android:text="@string/_2020"
        app:layout_constraintStart_toStartOf="@+id/text_minor"
        app:layout_constraintTop_toBottomOf="@+id/text_year_entered" />

</androidx.constraintlayout.widget.ConstraintLayout>