<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.degreeplanner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_requirements"
        android:name="com.example.degreeplanner.ui.requirements.RequirementsFragment"
        android:label="@string/title_requirements"
        tools:layout="@layout/fragment_requirements" />

    <fragment
        android:id="@+id/navigation_resources"
        android:name="com.example.degreeplanner.ui.resources.ResourcesFragment"
        android:label="@string/title_resources"
        tools:layout="@layout/fragment_resources" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.degreeplanner.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>