<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddRequirement">

        <ImageButton
            android:id="@+id/close_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/button_desc"
            android:tint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/text_new_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/new_requirement"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/close_page_button"
            app:layout_constraintTop_toBottomOf="@+id/close_page_button" />

        <TextView
            android:id="@+id/text_prerequisites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/prequisites"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/switch_p_np"
            app:layout_constraintTop_toBottomOf="@+id/switch_p_np" />

        <TextView
            android:id="@+id/text_overlap_requirement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/overlap_requirement"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/text__prereq_course_code"
            app:layout_constraintTop_toBottomOf="@+id/text__prereq_course_code" />

        <EditText
            android:id="@+id/text_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_department"
            android:inputType="textPersonName"
            android:text="@string/department"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_new_requirement"
            app:layout_constraintTop_toBottomOf="@+id/text_new_requirement" />

        <EditText
            android:id="@+id/text_course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_course_code"
            android:inputType="textPersonName"
            android:text="@string/course_code"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_department"
            app:layout_constraintTop_toBottomOf="@+id/text_department" />

        <EditText
            android:id="@+id/number_units"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/units"
            android:inputType="number"
            android:text="@string/units"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_course_code"
            app:layout_constraintTop_toBottomOf="@+id/text_course_code" />

        <Switch
            android:id="@+id/switch_p_np"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/p_np"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/number_units"
            app:layout_constraintTop_toBottomOf="@+id/number_units" />

        <EditText
            android:id="@+id/text_preq_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_department"
            android:inputType="textPersonName"
            android:text="@string/department"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_prerequisites"
            app:layout_constraintTop_toBottomOf="@+id/text_prerequisites" />

        <EditText
            android:id="@+id/text__prereq_course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_course_code"
            android:inputType="textPersonName"
            android:text="@string/course_code"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/text_preq_department"
            app:layout_constraintTop_toBottomOf="@+id/text_preq_department" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/text_overlap_requirement"
            app:layout_constraintTop_toBottomOf="@+id/text_overlap_requirement" />

        <EditText
            android:id="@+id/text_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/notes"
            android:inputType="textPersonName"
            android:text="@string/notes"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="90dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_notes"
            app:layout_constraintTop_toBottomOf="@+id/text_notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>