<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page_resources"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resources.ResourcesFragment">

    <Button
        android:id="@+id/college_advising_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/resource_college_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/college_advising"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/midnight_green"
        android:tint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/department_advising_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/resource_department_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/department_advising"
        android:textAllCaps="false"
        android:textColor="@color/midnight_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/college_advising_button" />

    <Button
        android:id="@+id/ucsd_catalog_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/resource_catalog_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/ucsd_catalog"
        android:textAllCaps="false"
        android:textColor="@color/midnight_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/department_advising_button" />

    <Button
        android:id="@+id/webreg_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/resource_webreg_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/webreg"
        android:textAllCaps="false"
        android:textColor="@color/midnight_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ucsd_catalog_button" />

</androidx.constraintlayout.widget.ConstraintLayout>