<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.resources.CollegeAdvising">

            <ImageButton
                android:id="@+id/college_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#00FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <Button
                android:id="@+id/revelle_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/revelle_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/muir_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/muir_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/revelle_advising" />

            <Button
                android:id="@+id/marshall_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/marshall_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/muir_advising" />

            <Button
                android:id="@+id/warren_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/warren_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/marshall_advising" />

            <Button
                android:id="@+id/erc_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/erc_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/warren_advising" />

            <Button
                android:id="@+id/sixth_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sixth_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/erc_advising" />

            <Button
                android:id="@+id/seventh_advising"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/resource_college_button"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/seventh_advising"
                android:textAllCaps="false"
                android:textColor="@color/midnight_green"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sixth_advising" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>

